# rust-auth

backend/: .env  Cargo.toml
backend/settings/: base.yaml  development.yaml
backend/src/: lib.rs  main.rs  settings.rs  startup.rs
backend/src/queries/: mod.rs  users.rs
backend/src/routes/: health.rs
backend/src/routes/users/: confirm_registration.rs  login.rs  logout.rs  mod.rs  register.rs
backend/src/types/: mod.rs
backend/src/utils/: mod.rs
backend/src/utils/auth/: mod.rs  password.rs  tokens.rs
