[package]
name = "rust-auth_backend"
version = "0.1.0"
authors = ["Erick Mwombeki <mwombekilubere@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "backend"

[dependencies]
actix-web = "4.3.1"
argon2 = "0.5.0"
chrono = "0.4.26"
config = { version = "0.13.3", features = ["yaml"] }
deadpool-redis = "0.12.0"
dotenv = "0.15.0"
hex = "0.4.3"
lettre = { version = "0.10.4", features = ["builder", "tokio1-native-tls"] }
minijinja = "1.0.3"

once_cell = "1.18.0"
pasetors = "0.6.7"
serde = "1.0.166"
serde_json = { version = "1.0.99", features = ["raw_value"] }
sqlx = { version = "0.7.0", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = [
    "fmt",
    "std",
    "env-filter",
    "registry",
    'json',
    'tracing-log',
] }
uuid = { version = "1.4.0", features = ["v4", "serde"] }
